@@ -24,11 +24,11 @@
 #include <pthread.h>
 #include <stdint.h>
 
-#include "libtask/list.h"
-#include "libtask/refcount.h"
 #include "libtask/task.h"
-#include "libtask/util/spinlock.h"
 #include "libtask/util/condition.h"
+#include "libtask/util/list.h"
+#include "libtask/util/refcount.h"
+#include "libtask/util/spinlock.h"
 
 // Task Pool
 //
